Fix social icon alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -163,8 +163,11 @@ pre {
   padding-right: 5px;
   vertical-align: text-top; }
 
-.social-media-list li + li {
-  padding-top: 5px; }
+
+.social-media-list li {
+  display: inline;
+  padding-left: 4px;
+}
 
 /**
  * Tables
